manifest/2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: category
        image: harbor.chanandy.internal/frontend/frontend:latest
        ports:
        - containerPort: 3000
