manifest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80          # 클러스터 내부에서 접근할 포트
    targetPort: 3000  # 컨테이너 내부 포트 (FastAPI 앱)
  type: NodePort
