manifest/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:055332451319:certificate/44c77037-3a74-436a-88e9-ff4f8ee96595
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: my-shared-alb
    alb.ingress.kubernetes.io/group.order: "1"   # (선택) ALB rule 적용 우선순위
    external-dns.alpha.kubernetes.io/hostname: www.chanandy.store
spec:
  rules:
    - host: www.chanandy.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
